# modern-vulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: application.cpp  application.h  main.cpp  shaderdata.h  utils.cpp  utils.h
src/shaders/: shader.frag  shader.vert  shaders.h
